Fixes for Torrent Inspector: make sure visible on screen if torrent scrolled in (desktop); show in dialog box if on small device
git-svn-id: http://svn.vuze.com/public/plugins@28213 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2

--- a/xmwebui/transmission/web/style/transmission/vuze-mw-420.css
+++ b/xmwebui/transmission/web/style/transmission/vuze-mw-420.css
@@ -32,8 +32,14 @@ div.dialog_container div.dialog_window {
 }
 
 div#torrent_inspector {
+	float: none;
+	border: 0;
+	padding:2px;
 	width: 100%;
-	padding: 90px 0 0 10px;
+}
+
+div#torrent_inspector #inspector-close {
+	display: none;
 }
 
 #menu_sep_rates,
