--- a/xmwebui/transmission/web/style/transmission/vuze-mw-900.css
+++ b/xmwebui/transmission/web/style/transmission/vuze-mw-900.css
@@ -3,5 +3,12 @@ div#torrent_logo {
 }
 
 div#torrent_inspector {
+	float: none;
+	border: 0;
+	padding:2px;
 	width: 100%;
+}
+
+div#torrent_inspector #inspector-close {
+	display: none;
 }
